# shepherdx

./: .gitignore  .gitmodules  Cargo.toml  TODO.md  flake.nix
.github/workflows/: build_nix.yml
crates/shepherd-app/: Cargo.toml
crates/shepherd-app/src/: control.rs  files.rs  main.rs  upload.rs
crates/shepherd-common/: Cargo.toml
crates/shepherd-common/src/: config.rs  lib.rs
crates/shepherd-mqtt/: Cargo.toml
crates/shepherd-mqtt/src/: client.rs  lib.rs  messages.rs  util.rs
crates/shepherd-run/: Cargo.toml
crates/shepherd-run/src/: main.rs  runner.rs  usercode.rs
crates/shepherd-ws/: Cargo.toml
crates/shepherd-ws/src/: buffer.rs  dispatch.rs  main.rs  ws.rs
src/: files.rs  main.rs  upload.rs
