[package]
name = "shepherd-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
chrono = "0.4.44"
fs_extra = "1.3.0"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.51.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zip = "8.5.1"
